# framework

./: .gitignore  Cargo.toml  Datastar.md  OBJECT_TYPE_TASKS.md  refactor_codebase.sh  refactor_final.py  refactor_v2.py  refactor_v3.py  refactor_v4.py
cargo/generate-models/: Cargo.toml  Makefile  USAGE.md  install.sh
cargo/generate-models/examples/: README.md  example.yml
cargo/generate-models/src/: main.rs  models.rs  parser.rs
core/: Cargo.toml
core/data/events/: app.yml  event_route.yml
core/schema/actions/: NEW.md  address.yml  ai.yml  archive.yml  audit.yml  aws_cloudfront.yml  aws_ecr.yml  aws_eventbridge.yml  aws_iam.yml  aws_s3.yml  aws_secrets.yml  aws_ses.yml  aws_sqs.yml  aws_sts.yml  blob.yml  cache.yml  calendar.yml  client.yml  color.yml  compress.yml  crypto.yml  csv.yml  date.yml  email.yml  event.yml  excel.yml  feature_flag.yml  file.yml  form.yml  geocode.yml  geoip.yml  geolocation.yml  github.yml  google_gemini.yml  google_pubsub.yml  group.yml  healthcheck.yml  html.yml  http_client.yml  http_response.yaml  (+42 more)
core/schema/data/: ai.yml  blob.yml  cache.yml  client.yml  email.yml  event.yml  file.yml  form.yml  healthcheck.yml  identity.yml  job.yml  metric.yml  notification.yml  permission.yml  queue.yml  route.yml  search.yml  secret.yml  session.yml  validation.yml  webhook.yml  workflow.yml
core/src/models/: data.rs  field.rs  mod.rs  route.rs  validator.rs
core/src/server/: config.rs
crates/: Cargo.toml
crates/actions/: LIBS.md  PLAN.md
crates/actions/ai/: Cargo.toml
crates/actions/approval/: Cargo.toml
crates/actions/audit/: Cargo.toml
crates/actions/aws_acm/: Cargo.toml
crates/actions/aws_autoscaling/: Cargo.toml
crates/actions/aws_cloudfront/: Cargo.toml
crates/actions/aws_ec2/: Cargo.toml
crates/actions/aws_ecr/: Cargo.toml
crates/actions/aws_ecs/: Cargo.toml
crates/actions/aws_elb/: Cargo.toml
crates/actions/aws_eventbridge/: Cargo.toml
crates/actions/aws_iam/: Cargo.toml
crates/actions/aws_lambda/: Cargo.toml
crates/actions/aws_rds/: Cargo.toml
crates/actions/aws_route53/: Cargo.toml
crates/actions/aws_s3/: Cargo.toml
crates/actions/aws_secrets/: Cargo.toml
crates/actions/aws_ses/: Cargo.toml
crates/actions/aws_sqs/: Cargo.toml
crates/actions/aws_sts/: Cargo.toml
crates/actions/aws_vpc/: Cargo.toml
crates/actions/blob/: Cargo.toml
crates/actions/cache/: Cargo.toml
crates/actions/calendar/: Cargo.toml
crates/actions/client/: Cargo.toml
crates/actions/color/: Cargo.toml
crates/actions/compress/: Cargo.toml
crates/actions/crypto/: Cargo.toml
crates/actions/csv/: Cargo.toml
crates/actions/docker/: Cargo.toml
crates/actions/email/: Cargo.toml
crates/actions/event/: Cargo.toml
crates/actions/excel/: Cargo.toml
crates/actions/file/: Cargo.toml
crates/actions/form/: Cargo.toml
crates/actions/geocode/: Cargo.toml
crates/actions/geoip/: Cargo.toml
crates/actions/geolocation/: Cargo.toml
crates/actions/git/: Cargo.toml
crates/actions/github/: Cargo.toml
crates/actions/google_gemini/: Cargo.toml
crates/actions/google_pubsub/: Cargo.toml
crates/actions/group/: Cargo.toml
crates/actions/healthcheck/: Cargo.toml
crates/actions/http_response/: Cargo.toml
crates/actions/identity/: Cargo.toml
crates/actions/job/: Cargo.toml
crates/actions/log/: Cargo.toml
crates/actions/memgraph/: Cargo.toml
crates/actions/metric/: Cargo.toml
crates/actions/microsoft_teams/: Cargo.toml
crates/actions/mongodb/: Cargo.toml
crates/actions/notification/: Cargo.toml
crates/actions/parallel/: Cargo.toml
crates/actions/passkey/: Cargo.toml
crates/actions/pdf/: Cargo.toml
crates/actions/permission/: Cargo.toml
crates/actions/policy/: Cargo.toml
crates/actions/privacy/: Cargo.toml
crates/actions/push/: Cargo.toml
crates/actions/queue/: Cargo.toml
crates/actions/random/: Cargo.toml
crates/actions/response/: Cargo.toml
crates/actions/role/: Cargo.toml
crates/actions/route/: Cargo.toml
crates/actions/run/: Cargo.toml
crates/actions/schedule/: Cargo.toml
crates/actions/search/: Cargo.toml
crates/actions/secret/: Cargo.toml
crates/actions/session/: Cargo.toml
crates/actions/sign/: Cargo.toml
crates/actions/slack/: Cargo.toml
crates/actions/sql/: Cargo.toml
crates/actions/stripe/: Cargo.toml
crates/actions/successfactors/: Cargo.toml
crates/actions/transform/: Cargo.toml
crates/actions/url/: Cargo.toml
crates/actions/user/: Cargo.toml
crates/event/: Cargo.toml  bus.rs  channel.rs  error.rs  store.rs  subscription.rs  tests.rs
crates/schedule/: error.rs
crates/storage/: entity.rs  filter.rs  lib.rs  repository.rs  tests.rs
crates/task/: Cargo.toml  entity.rs  executor.rs  manager.rs  scheduler.rs  store.rs  tests.rs
service/api/: Cargo.toml
service/app/: Cargo.toml  GETTING_STARTED.md  README.md  config.rs  error.rs  lib.rs  lifecycle.rs
service/blob/: Cargo.toml  error.rs  lib.rs  service.rs  store.rs
service/cache/: Cargo.toml  error.rs  lib.rs  service.rs  store.rs
service/event/: Cargo.toml  bus.rs  channel.rs  error.rs  event.rs  event_query.rs  event_store_trait.rs  lib.rs  service.rs  store.rs  subscription.rs  tests.rs
service/lock/: Cargo.toml  error.rs  lib.rs  manager.rs  service.rs  tests.rs
service/schedule/: Cargo.toml  backoff_strategy.rs  entity.rs  error.rs  execution_history.rs  job.rs  job_executor.rs  job_query.rs  job_status.rs  lib.rs  retry_config.rs  schedule.rs  schedule_query.rs  schedule_stats.rs  schedule_status.rs  schedule_store_trait.rs  schedule_type.rs  scheduler.rs  scheduler_config.rs  scheduler_event.rs  service.rs  store.rs  tests.rs
service/server/: .gitignore  Cargo.toml  README.md  package.json  wrangler.toml
service/storage/: Cargo.toml  entity.rs  error.rs  filter.rs  lib.rs  repository.rs  service.rs
service/task/: Cargo.toml  entity.rs  error.rs  execution_history.rs  executor.rs  lib.rs  lock_helpers.rs  manager.rs  priority.rs  retry_config.rs  scheduler.rs  service.rs  status.rs  store.rs  task.rs  tests.rs  worker.rs  worker_config.rs  worker_event.rs
(+3424 files in other folders)
