[package]
name = "harana-core"
version = "0.1.0"
edition = "2021"
authors = ["Harana Team"]
description = "Core types and traits for the Harana framework"
license = "MIT"
repository = "https://github.com/harana/framework"
keywords = ["harana", "build", "framework", "plugin"]
categories = ["development-tools::build-utils"]

[lib]
name = "harana_core"
path = "src/lib.rs"

[dependencies]
async-trait = "0.1"
asynk-strim = "0.1"
axum = "0.8"
datastar = { version = "0.2", features = ["axum"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tokio-test = "0.4"

[features]
default = []
