[package]
name = "harana-core"
version = "0.1.0"
edition = "2021"
authors = ["Harana Team"]
description = "Core types and traits for the Harana framework"
license = "MIT"
repository = "https://github.com/harana/framework"
keywords = ["harana", "build", "framework", "plugin"]
categories = ["development-tools::build-utils"]

[lib]
name = "harana_core"
path = "src/lib.rs"

[dependencies]

[dev-dependencies]
tokio-test = "0.4"

[features]
default = []
