[workspace]
resolver = "2"

members = [
    # Action modules
    "actions/ai",
    "actions/aws_ecr",
    "actions/aws_iam",
    "actions/aws_s3",
    "actions/aws_ses",
    "actions/aws_sqs",
    "actions/aws_sts",
    "actions/blob",
    "actions/cache",
    "actions/client",
    "actions/email",
    "actions/event",
    "actions/file",
    "actions/form",
    "actions/group",
    "actions/healthcheck",
    "actions/identity",
    "actions/job",
    "actions/memgraph",
    "actions/metric",
    "actions/mongodb",
    "actions/notification",
    "actions/policy",
    "actions/queue",
    "actions/response",
    "actions/role",
    "actions/route",
    "actions/search",
    "actions/secret",
    "actions/session",
    "actions/sql",
    "actions/user",
    "actions/validation",
    "actions/webhook",
    "actions/workflow",
    
    # Component modules
    "components/http-server",
    
    # Tools
    "cargo-generate-models",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Harana Team"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/harana/framework"

[workspace.dependencies]
a2 = "0.10.0"
anyhow = "1"
apalis = "0.7"
async-stripe = "0.41.0"
async-trait = "0.1"
asynk-strim = "0.1"
aws-config = { version= "1", features = ["behavior-version-latest"] }
aws-credential-types = "1"
aws-sdk-cloudwatch = "1"
aws-sdk-ecr = "1"
aws-sdk-iam = "1"
aws-sdk-kms = "1"
aws-sdk-s3 = "1"
aws-sdk-sesv2 = "1"
aws-sdk-sqs = "1"
aws-sdk-sts = "1"
aws-smithy-types = "1"
aws-types = "1"
axum = "0.8"
base64 = "0.22"
bson = { version = "3", features = ["chrono-0_4", "uuid-1"] }
bytes = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
csscolorparser = "0.8.1"
datastar = { version = "0.2", features = ["axum"] }
email_address = "0.2.9"
emval = "0.1.12"
fcm-service = "0.2.3"
fred = "10"
futures = "0.3"
geo-uri = "0.2.4"
geoutils = "0.5.1"
hex_color = "3.0.0"
http = "1"
infer = "0.19"
jsonwebtoken = "10"
language-tags = "0.3.2"
latlon = "0.1.3"
macaddr = "1.0.1"
mime = "0.3.17"
minijinja = "2.14.0"
mongodb = { version = "3", features = ["zlib-compression"] }
object_store_opendal = "0.55.0"
opendal = "0.55.0"
parquet_opendal = "0.7.0"
phonelib = "0.2.1"
rsmgclient = "3"
rusty-money = "0.4.1"
secret-vault = "1"
semver = "1"
sentry = "0.46.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
simd-json-derive = "0.18.0"
snmalloc-rs = "0.3"
sqlx = "0.8.6"
thiserror = "2"
time = "0.3.44"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ureq = { version = "2", default-features = false, features = ["json", "tls"] }
url = "2"
uuid = "1"
web-push-native = "0.4.0"
webauthn-rs = "0.5"
