[workspace]
resolver = "2"

members = [
    # Action modules
    "actions/address",
    "actions/ai",
    "actions/approval",
    "actions/archive",
    "actions/audit",
    "actions/aws_acm",
    "actions/aws_autoscaling",
    "actions/aws_cloudfront",
    "actions/aws_ec2",
    "actions/aws_ecr",
    "actions/aws_ecs",
    "actions/aws_elb",
    "actions/aws_eventbridge",
    "actions/aws_iam",
    "actions/aws_route53",
    "actions/aws_s3",
    "actions/aws_secrets",
    "actions/aws_ses",
    "actions/aws_sqs",
    "actions/aws_sts",
    "actions/aws_vpc",
    "actions/blob",
    "actions/cache",
    "actions/calendar",
    "actions/client",
    "actions/color",
    "actions/compress",
    "actions/crypto",
    "actions/csv",
    "actions/date",
    "actions/email",
    "actions/event",
    "actions/excel",
    "actions/feature_flag",
    "actions/file",
    "actions/form",
    "actions/geocode",
    "actions/geoip",
    "actions/geolocation",
    "actions/group",
    "actions/healthcheck",
    "actions/html",
    "actions/http_response",
    "actions/identity",
    "actions/image",
    "actions/job",
    "actions/json",
    "actions/log",
    "actions/markdown",
    "actions/math",
    "actions/memgraph",
    "actions/metric",
    "actions/microsoft_teams",
    "actions/mongodb",
    "actions/notification",
    "actions/parallel",
    "actions/passkey",
    "actions/pdf",
    "actions/policy",
    "actions/privacy",
    "actions/push",
    "actions/queue",
    "actions/random",
    "actions/response",
    "actions/role",
    "actions/route",
    "actions/run",
    "actions/schedule",
    "actions/search",
    "actions/session",
    "actions/sign",
    "actions/slack",
    "actions/sql",
    "actions/text",
    "actions/transform",
    "actions/url",
    "actions/user",
    "actions/uuid",
    "actions/validation",
    "actions/webhook",
    "actions/workflow",
    "actions/xml",
    
    # Component modules
    "components/http-server",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Harana Team"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/harana/framework"

[workspace.dependencies]
a2 = "0.10.0"
aes-gcm = "0.10"
ammonia = "4"
anyhow = "1"
apalis = "0.7"
askama = { version = "0.15.1", features = ["with-serde"] }
async-stripe = "0.41.0"
async-trait = "0.1"
asynk-strim = "0.1"
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-credential-types = "1"
aws-sdk-acm = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-cloudfront = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-cloudwatch = "1"
aws-sdk-ec2 = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-ecr = "1"
aws-sdk-ecs = "1"
aws-sdk-elasticloadbalancingv2 = "1"
aws-sdk-eventbridge = "1"
aws-sdk-iam = "1"
aws-sdk-kms = "1"
aws-sdk-route53 = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-s3 = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-secretsmanager = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-ses = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-sesv2 = "1"
aws-sdk-sqs = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-sts = { version = "1", features = ["behavior-version-latest"] }
aws-smithy-types = "1"
aws-types = "1"
axum = "0.8"
base64 = "0.22"
blake3 = "1"
brotli = "7"
bson = { version = "3", features = ["chrono-0_4", "uuid-1"] }
bytes = "1"
calamine = "0.26"
calendar-link = "0.1.3"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
cpc = "3"
cron = "0.12"
croner = "3"
csv = "1"
csscolorparser = "0.8.1"
dashmap = "6"
datastar = { version = "0.3.1", features = ["axum"] }
email_address = "0.2.9"
emval = "0.1.12"
eventix = { version = "0.3", features = ["redis"] }
fcm-service = "0.2.3"
flate2 = "1"
fred = "10"
futures = "0.3"
geo = "0.28"
geo-uri = "0.2.4"
geoutils = "0.5.1"
glob = "0.3"
google-calendar3 = "7"
handlebars = "6"
heck = "0.5"
hex = "0.4"
hex_color = "3.0.0"
hmac = "0.12"
html2md = "0.2"
htmlize = { version = "1.0", features = ["unescape"] }
http = "1"
image = "0.25"
indexmap = { version = "2", features = ["serde"] }
infer = "0.19"
jsonpath-rust = "0.7"
jsonschema = "0.26"
jsonwebtoken = "10"
krilla = "0.6"
language-tags = "0.3.2"
latlon = "0.1.3"
lazy_static = "1"
libc = "0.2"
loki_text = "0.1.7"
lopdf = "0.34"
lz4_flex = "0.11"
macaddr = "1.0.1"
mime = "0.3.17"
minijinja = "2"
moka = { version = "0.12", features = ["sync"] }
mongodb = { version = "3", features = ["zlib-compression"] }
object_store_opendal = "0.55.0"
once_cell = "1"
opendal = "0.55.0"
opentelemetry = { version = "0.31.0", features = ["rt-tokio"] }
opentelemetry-gcloud-trace = "0.22.0"
parquet_opendal = "0.7.0"
parking_lot = "0.12"
pem = "3"
percent-encoding = "2"
phonelib = "0.2.1"
pulldown-cmark = { version = "0.10", default-features = false, features = ["html"] }
prometheus = "0.13"
quick-xml = { version = "0.37", features = ["serialize"] }
rand = "0.8"
regex = "1"
reqwest = { version = "0.12", features = ["json", "multipart"] }
ring = "0.17"
rsmgclient = "3"
rust_xlsxwriter = "0.92"
rusty-money = "0.4.1"
scraper = "0.21"
secret-vault = "1"
semver = "1"
sentry = "0.46.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
serial_test = "3"
sha2 = "0.10"
sha3 = "0.10"
simd-json-derive = "0.18.0"
snmalloc-rs = "0.3"
sqlx = "0.8.6"
stringzilla = "4.6.0"
sysinfo = "0.32"
tar = "0.4"
tempfile = "3"
textwrap = "0.16"
thiserror = "2"
time = "0.3.44"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
unicode-segmentation = "1"
ureq = { version = "3", default-features = false, features = ["json", "tls"] }
url = "2"
urlencoding = "2"
uuid = { version = "1", features = ["v4", "v7", "serde"] }
walkdir = "2"
web-push-native = "0.4.0"
webauthn-rs = { version = "0.5", features = ["danger-allow-state-serialisation"] }
webauthn-rs-proto = "0.5"
wiremock = "0.6"
zip = "2"
zstd = "0.13"
