[package]
name = "generate-models"
version = "0.1.0"
edition = "2021"
authors = ["Harana Team"]
description = "Cargo plugin to generate Python and Rust models from YAML schemas"
license = "MIT"
repository = "https://github.com/harana/framework"

[workspace]
# This crate has its own workspace to avoid conflicts

[[bin]]
name = "cargo-generate-models"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
anyhow = "1.0"
walkdir = "2.4"
