[package]
name = "harana-components-http-server"
version.workspace = true
edition.workspace = true

[[bin]]
name = "harana-server"
path = "src/bin/server.rs"

[dependencies]
anyhow.workspace = true
askama.workspace = true
asynk-strim.workspace = true
axum = { workspace = true, features = ["macros"] }
base64.workspace = true
bytes.workspace = true
chrono.workspace = true
dashmap.workspace = true
datastar = { workspace = true, features = ["axum"] }
futures.workspace = true
harana-actions-passkey = { path = "../actions/passkey" }
harana-actions-session = { path = "../actions/session" }
harana-components-events = { path = "../event" }
http.workspace = true
jsonwebtoken.workspace = true
once_cell.workspace = true
parking_lot.workspace = true
rand.workspace = true
reqwest.workspace = true
serde_json.workspace = true
serde.workspace = true
sha2.workspace = true
sysinfo.workspace = true
thiserror.workspace = true
tokio.workspace = true
tower-http.workspace = true
tower.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
url.workspace = true
urlencoding.workspace = true
uuid.workspace = true

[dev-dependencies]
http-body-util.workspace = true
tokio = { workspace = true, features = ["test-util"] }
tower = { workspace = true, features = ["util"] }
