[package]
name = "harana-components-cache"
version.workspace = true
edition.workspace = true

[lib]
path = "lib.rs"

[features]
default = []
kv = ["worker", "wasm-bindgen"]

[dependencies]
async-trait.workspace = true
base64.workspace = true
dashmap.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
wasm-bindgen = { workspace = true, optional = true }
worker = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt", "time"] }
