[package]
name = "harana-components-cache"
version.workspace = true
edition.workspace = true

[lib]
path = "lib.rs"

[features]
default = []
kv = ["worker", "wasm-bindgen"]
mongodb = ["dep:mongodb", "dep:futures", "dep:regex"]

[dependencies]
async-trait.workspace = true
base64.workspace = true
dashmap.workspace = true
futures = { workspace = true, optional = true }
mongodb = { workspace = true, optional = true }
regex = { workspace = true, optional = true }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
wasm-bindgen = { workspace = true, optional = true }
worker = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt", "time"] }
