[package]
name = "harana-components-storage"
version.workspace = true
edition.workspace = true

[lib]
path = "lib.rs"

[features]
default = []
postgres = []
mysql = []
sqlite = []
mongodb = []
full = ["postgres", "mysql", "sqlite", "mongodb"]

[dependencies]
async-trait.workspace = true
chrono.workspace = true
futures-timer.workspace = true
futures.workspace = true
mongodb.workspace = true
regex.workspace = true
serde_json.workspace = true
serde.workspace = true
sqlx.workspace = true
thiserror.workspace = true
ulid.workspace = true

[dev-dependencies]
tokio.workspace = true
