[package]
name = "harana-actions-approval"
version.workspace = true
edition.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
uuid.workspace = true
dashmap.workspace = true
once_cell.workspace = true

[dev-dependencies]
tokio.workspace = true
