[package]
name = "action-aws-rds"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
dashmap = "5"
once_cell = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tokio-test = "0.4"
