[package]
name = "harana-actions-aws-secrets"
version.workspace = true
edition.workspace = true

[dependencies]
aws-config.workspace = true
aws-sdk-secretsmanager.workspace = true
base64.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
