[package]
name = "harana-actions-cache"
version.workspace = true
edition.workspace = true

[dependencies]
moka.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
parking_lot.workspace = true
once_cell.workspace = true

[dev-dependencies]
tokio.workspace = true
