[package]
name = "harana-actions-form"
version.workspace = true
edition.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
parking_lot.workspace = true
once_cell.workspace = true
csv.workspace = true

[dev-dependencies]
tokio.workspace = true
