[package]
name = "harana-actions-microsoft-teams"
version.workspace = true
edition.workspace = true

[dependencies]
chrono.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
urlencoding.workspace = true

[dev-dependencies]
tokio.workspace = true
wiremock.workspace = true
