[package]
name = "harana-actions-policy"
version.workspace = true
edition.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
dashmap.workspace = true
once_cell.workspace = true
uuid.workspace = true
chrono.workspace = true
regex.workspace = true

[dev-dependencies]
tokio.workspace = true
serial_test.workspace = true
