[package]
name = "harana-actions-push"
version.workspace = true
edition.workspace = true

[dependencies]
a2.workspace = true
base64.workspace = true
fcm-service.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
web-push-native.workspace = true

[dev-dependencies]
tokio.workspace = true
