[package]
name = "harana-actions-run"
version.workspace = true
edition.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
dashmap.workspace = true
once_cell.workspace = true
parking_lot.workspace = true

[target.'cfg(unix)'.dependencies]
libc.workspace = true

[dev-dependencies]
tokio.workspace = true
