[package]
name = "harana-actions-schedule"
version.workspace = true
edition.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
chrono-tz.workspace = true
cron.workspace = true
dashmap.workspace = true
once_cell.workspace = true
parking_lot.workspace = true

[dev-dependencies]
tokio.workspace = true
