[package]
name = "harana-actions-session"
version.workspace = true
edition.workspace = true

[dependencies]
uuid.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
parking_lot.workspace = true
once_cell.workspace = true

[dev-dependencies]
tokio.workspace = true
