[package]
name = "harana-actions-sql"
version.workspace = true
edition.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
dashmap.workspace = true
once_cell.workspace = true
parking_lot.workspace = true
chrono.workspace = true

[dev-dependencies]
tokio.workspace = true
